--- a/assets/sass/base/layout/_flex-align-self.scss
+++ b/assets/sass/base/layout/_flex-align-self.scss
@@ -1,38 +1,41 @@
-// # flex_ align-self
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
-@include make-responsive-rulesets((
+@include make-responsive-rulesets(
   (
-    'selector': '.flx-as-auto',
-    'declarations': (
-      align-self: auto,
+    (
+      "selector": ".flx-as-auto",
+      "declarations": (
+        align-self: auto,
+      )
     ),
-  ), (
-    'selector': '.flx-as-start',
-    'declarations': (
-      align-self: flex-start,
+    (
+      "selector": ".flx-as-start",
+      "declarations": (
+        align-self: flex-start,
+      )
     ),
-  ), (
-    'selector': '.flx-as-end',
-    'declarations': (
-      align-self: flex-end,
+    (
+      "selector": ".flx-as-end",
+      "declarations": (
+        align-self: flex-end,
+      )
     ),
-  ), (
-    'selector': '.flx-as-center',
-    'declarations': (
-      align-self: center,
+    (
+      "selector": ".flx-as-center",
+      "declarations": (
+        align-self: center,
+      )
     ),
-  ), (
-    'selector': '.flx-as-stretch',
-    'declarations': (
-      align-self: stretch,
+    (
+      "selector": ".flx-as-stretch",
+      "declarations": (
+        align-self: stretch,
+      )
     ),
-  ), (
-    'selector': '.flx-as-baseline',
-    'declarations': (
-      align-self: baseline,
-    ),
+    (
+      "selector": ".flx-as-baseline",
+      "declarations": (
+        align-self: baseline,
+      )
+    )
   ),
-), $screen-sizes);
+  $screen-sizes
+);
