--- a/assets/sass/base/layout/_wrap.scss
+++ b/assets/sass/base/layout/_wrap.scss
@@ -1,8 +1,4 @@
-// # wrap
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
 @include make-responsive-rulesets(
-  make-RSON($wraps, '.wp', 'max-width'), $screen-sizes
+  make-RSON($wraps, ".wp", "max-width"),
+  $screen-sizes
 );
