--- a/assets/sass/base/layout/_z-index.scss
+++ b/assets/sass/base/layout/_z-index.scss
@@ -1,8 +1,4 @@
-// # z-index
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
 @include make-responsive-rulesets(
-  make-RSON($z-indexes, '.z', 'z-index'), $screen-sizes
+  make-RSON($z-indexes, ".z", "z-index"),
+  $screen-sizes
 );
