--- a/assets/sass/base/typography/_font-family.scss
+++ b/assets/sass/base/typography/_font-family.scss
@@ -1,8 +1,4 @@
-// # font_ family
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-
 @include make-responsive-rulesets(
-  make-RSON($font-families, '.f-f', 'font-family'), $screen-sizes
+  make-RSON($font-families, ".f-f", "font-family"),
+  $screen-sizes
 );
