--- a/assets/sass/base/typography/_font-size.scss
+++ b/assets/sass/base/typography/_font-size.scss
@@ -1,8 +1,4 @@
-// # font_ size
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
 @include make-responsive-rulesets(
-  make-RSON($type-scale, '.f-s', 'font-size'), $screen-sizes
+  make-RSON($type-scale, ".f-s", "font-size"),
+  $screen-sizes
 );
