--- a/assets/sass/foundation/helpers/_unit-conversion.scss
+++ b/assets/sass/foundation/helpers/_unit-conversion.scss
@@ -1,23 +1,21 @@
-@function rem($pixels, $context: $base-font-size) {
+$base-context: 16px;
+
+@function convert-px-to-rem($pixels, $context: $base-context) {
   @if (unitless($pixels)) {
     $pixels: $pixels * 1px;
   }
-
   @if (unitless($context)) {
     $context: $context * 1px;
   }
-
   @return $pixels / $context * 1rem;
 }
 
-@function em($pixels, $context: $base-font-size) {
+@function convert-px-to-em($pixels, $context: $base-context) {
   @if (unitless($pixels)) {
     $pixels: $pixels * 1px;
   }
-
   @if (unitless($context)) {
     $context: $context * 1px;
   }
-
   @return $pixels / $context * 1em;
 }
