--- a/assets/sass/base/theme/_background-repeat.scss
+++ b/assets/sass/base/theme/_background-repeat.scss
@@ -1,28 +1,29 @@
-// # background_ repeat
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
-@include make-responsive-rulesets((
+@include make-responsive-rulesets(
   (
-    'selector': '.bg-r-none',
-    'declarations': (
-      background-repeat: no-repeat,
+    (
+      "selector": ".bg-r-none",
+      "declarations": (
+        background-repeat: no-repeat,
+      )
     ),
-  ), (
-    'selector': '.bg-r-repeat',
-    'declarations': (
-      background-repeat: repeat,
+    (
+      "selector": ".bg-r-repeat",
+      "declarations": (
+        background-repeat: repeat,
+      )
     ),
-  ), (
-    'selector': '.bg-r-repeat-x',
-    'declarations': (
-      background-repeat: repeat-x,
+    (
+      "selector": ".bg-r-repeat-x",
+      "declarations": (
+        background-repeat: repeat-x,
+      )
     ),
-  ), (
-    'selector': '.bg-r-repeat-y',
-    'declarations': (
-      background-repeat: repeat-y,
-    ),
+    (
+      "selector": ".bg-r-repeat-y",
+      "declarations": (
+        background-repeat: repeat-y,
+      )
+    )
   ),
-), $screen-sizes);
+  $screen-sizes
+);
