--- a/assets/sass/base/theme/_background-size.scss
+++ b/assets/sass/base/theme/_background-size.scss
@@ -1,23 +1,23 @@
-// # background_ size
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
-@include make-responsive-rulesets((
+@include make-responsive-rulesets(
   (
-    'selector': '.bg-s-none',
-    'declarations': (
-      background-size: auto auto,
+    (
+      "selector": ".bg-s-none",
+      "declarations": (
+        background-size: auto auto,
+      )
     ),
-  ), (
-    'selector': '.bg-s-cover',
-    'declarations': (
-      background-size: cover,
+    (
+      "selector": ".bg-s-cover",
+      "declarations": (
+        background-size: cover,
+      )
     ),
-  ), (
-    'selector': '.bg-s-contain',
-    'declarations': (
-      background-size: contain,
-    ),
+    (
+      "selector": ".bg-s-contain",
+      "declarations": (
+        background-size: contain,
+      )
+    )
   ),
-), $screen-sizes);
+  $screen-sizes
+);
