--- a/assets/sass/base/typography/_font-style.scss
+++ b/assets/sass/base/typography/_font-style.scss
@@ -1,18 +1,17 @@
-// # font_ style
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
-@include make-responsive-rulesets((
+@include make-responsive-rulesets(
   (
-    'selector': '.f-sy-normal',
-    'declarations': (
-      font-style: normal,
+    (
+      "selector": ".f-sy-normal",
+      "declarations": (
+        font-style: normal,
+      )
     ),
-  ), (
-    'selector': '.f-sy-italic',
-    'declarations': (
-      font-style: italic,
-    ),
+    (
+      "selector": ".f-sy-italic",
+      "declarations": (
+        font-style: italic,
+      )
+    )
   ),
-), $screen-sizes);
+  $screen-sizes
+);
