--- a/assets/sass/base/typography/_text-decoration.scss
+++ b/assets/sass/base/typography/_text-decoration.scss
@@ -1,23 +1,23 @@
-// # text_ decoration
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
-@include make-responsive-rulesets((
+@include make-responsive-rulesets(
   (
-    'selector': '.t-d-none',
-    'declarations': (
-      text-decoration: none,
+    (
+      "selector": ".t-d-none",
+      "declarations": (
+        text-decoration: none,
+      )
     ),
-  ),(
-    'selector': '.t-d-strike',
-    'declarations': (
-      text-decoration: strike,
+    (
+      "selector": ".t-d-strike",
+      "declarations": (
+        text-decoration: strike,
+      )
     ),
-  ), (
-    'selector': '.t-d-underline',
-    'declarations': (
-      text-decoration: underline,
-    ),
+    (
+      "selector": ".t-d-underline",
+      "declarations": (
+        text-decoration: underline,
+      )
+    )
   ),
-), $screen-sizes);
+  $screen-sizes
+);
