update atomic-classes config

--- a/src/assets/sass/base/layout/_overflow.scss
+++ b/src/assets/sass/base/layout/_overflow.scss
@@ -80,15 +80,75 @@
   @include make-responsive-rulesets(
     (
       (
-        "selector": ".js-of-visible",
+        "selector": ".of-visible",
         "declarations": (
           overflow: visible,
         )
       ),
       (
-        "selector": ".js-of-hidden",
+        "selector": ".of-hidden",
         "declarations": (
           overflow: hidden,
+        )
+      ),
+      (
+        "selector": ".of-scroll",
+        "declarations": (
+          overflow: scroll,
+        )
+      ),
+      (
+        "selector": ".of-auto",
+        "declarations": (
+          overflow: auto,
+        )
+      ),
+      (
+        "selector": ".of-x-visible",
+        "declarations": (
+          overflow-x: visible,
+        )
+      ),
+      (
+        "selector": ".of-x-hidden",
+        "declarations": (
+          overflow-x: hidden,
+        )
+      ),
+      (
+        "selector": ".of-x-scroll",
+        "declarations": (
+          overflow-x: scroll,
+        )
+      ),
+      (
+        "selector": ".of-x-auto",
+        "declarations": (
+          overflow-x: auto,
+        )
+      ),
+      (
+        "selector": ".of-y-visible",
+        "declarations": (
+          overflow-y: visible,
+        )
+      ),
+      (
+        "selector": ".of-y-hidden",
+        "declarations": (
+          overflow-y: hidden,
+        )
+      ),
+      (
+        "selector": ".of-y-scroll",
+        "declarations": (
+          overflow-y: scroll,
+        )
+      ),
+      (
+        "selector": ".of-y-auto",
+        "declarations": (
+          overflow-y: auto,
         )
       )
     ),
