--- a/src/assets/sass/foundation/config/_theme.scss
+++ b/src/assets/sass/foundation/config/_theme.scss
@@ -13,6 +13,7 @@ $neutral-colors: (
   "light-grey": #eee,
   "near-white": #f3f3f3,
   "white": #fff,
+  "transparent": transparent,
 );
 
 $notification-colors: (
